issue with chrome on mobile for some reason...

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -167,4 +167,5 @@ main{
 
 .hidden{
     display: none;
+    visibility: hidden;
 }
